Pridano vkladani a prevzorkovani obrazku, rozsireni formularu, komentare ke clankum

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>4.2.3.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+		</dependency>
+
 
 	</dependencies>
 
