--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dima?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/dima?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
+
+spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
+spring.jpa.properties.hibernate.search.default.indexBase=D:/PPRO/var/lucene/indexes/
