--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
 
 spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
-spring.jpa.properties.hibernate.search.default.indexBase=D:/PPRO/var/lucene/indexes/
+spring.jpa.properties.hibernate.search.default.indexBase = /var/lucene/indexes/
