--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
 
 spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
-spring.jpa.properties.hibernate.search.default.indexBase = /var/lucene/indexes/
+spring.jpa.properties.hibernate.search.default.indexBase=D:/PPRO/var/lucene/indexes/
