--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+#pripojeni k databazi
 spring.datasource.url=jdbc:mysql://localhost:3306/dima?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql = true
+#nasledujici radek vytvori tabulky a data - zakomentovat po prvnim spusteni
+#spring.jpa.hibernate.ddl-auto=create
 
-spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
+#odkladaci uloziste - nastavit cestu na existujici disk
 spring.jpa.properties.hibernate.search.default.indexBase=D:/PPRO/var/lucene/indexes/
