--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 
+#directory provider pro Hibernate Search
 spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
-#odkladaci uloziste - nastavit cestu na existujici disk
+#vyhledavaci indexy Lucene vytvorene pomoci Hibernate Search - nastavit cestu na existujici disk
+#definuje se pouze v pripade, ze jako provider je nastaven filesystem
 spring.jpa.properties.hibernate.search.default.indexBase=D:/PPRO/var/lucene/indexes/
+#analyzator vyhledavanych retezcu pro umozneni fultextoveho vyhledavani vcetne ruznych tvaru slov
+#hibernate.search.analyzer=org.apache.lucene.analysis.standard.StandardAnalyzer
