--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+# ----------------------------------------
+# WEB PROPERTIES
+# ----------------------------------------
+# SPRING MVC
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-#pripojeni k databazi
+# ----------------------------------------
+# DATASOURCE
+# ----------------------------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/dima?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=
@@ -13,6 +19,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 
+
+# ----------------------------------------
+# HIBERNATE SEARCH
+# ----------------------------------------
 #directory provider pro Hibernate Search
 spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
 #vyhledavaci indexy Lucene vytvorene pomoci Hibernate Search - nastavit cestu na existujici disk
