--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,8 @@ nbdist/
 /src/main/webapp/resources/images/original/
 /src/main/webapp/resources/images/resampled/
 
+### Uploaded graphs ###
+/src/main/webapp/resources/graphs/
+
 ### Temporary files ###
 var/
