--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,20 @@ target/
 *.iml
 *.ipr
 
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 
+### Uploaded images ###
+/src/main/webapp/resources/images/original/
+/src/main/webapp/resources/images/resampled/
 
-### Hibernate Search index files ###
+### Uploaded graphs ###
+/src/main/webapp/resources/graphs/
+
+### Temporary files ###
 var/
