--- a/.gitignore
+++ b/.gitignore
@@ -16,14 +16,6 @@ target/
 *.iml
 *.ipr
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-
 ### Uploaded images ###
 /src/main/webapp/resources/images/original/
 /src/main/webapp/resources/images/resampled/
@@ -31,5 +23,5 @@ nbdist/
 ### Uploaded graphs ###
 /src/main/webapp/resources/graphs/
 
-### Temporary files ###
+### Hibernate Search index files ###
 var/
