--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 
+		<!-- Lombok - knihovna pro omezeni boilerplate kodu -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
